updates to manual

--- a/identity/adoc/01Introduction.adoc
+++ b/identity/adoc/01Introduction.adoc
@@ -1,12 +1,12 @@
 == Introduction
-This development guide on the MCP identity platform describes the current state of the MCP reference implementation.
+This development guide on the Maritime Connectivity Platform identity platform describes the current state of the MCP reference implementation.
 
 Please do not email us directly about usage questions. Instead use our Google Group at https://groups.google.com/forum/#!forum/maritimecloud for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.
 
 This developer guide is intended to make you familiar with developing secure applications and services for MCP in particular with regards to Identity Management.
 
 === A Bit of History
-The MCP project started out as an internal project at the Danish Maritime Authority in the autumn of 2012.
+The Maritime Connectivity Platform project started out as an internal project at the Danish Maritime Authority in the autumn of 2012.
 As part of the e-Navigation process the Danish Maritime Authority had been working on an e-Navigation Prototype Display system called EPD. The EPD consist of two applications for demonstrating potential e-navigation solutions. An ECDIS like ship side application and a shore side application. 
 
 During the development it was clear that AIS was a severe limiting factor when communicating between the ship side and the shore side. Putting a lot of limitations of the different kind of maritime services that could be developed. Especially three issues was identified. 
