--- a/identity/adoc/01Introduction.adoc
+++ b/identity/adoc/01Introduction.adoc
@@ -1,7 +1,7 @@
 == Introduction
 This development guide on the Maritime Connectivity Platform identity platform describes the current state of the MCP reference implementation.
 
-Please do not email us directly about usage questions. Instead use our Google Group at https://groups.google.com/forum/#!forum/maritimecloud for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.
+Please do not email us directly about usage questions. Instead use our Google Group at https://groups.google.com/forum/#!forum/maritimeconnectivity for general usage questions. In this way future users can see answers to commonly asked questions. Google Groups is also where we post information about new releases and updated documentation.
 
 This developer guide is intended to make you familiar with developing secure applications and services for MCP in particular with regards to Identity Management.
 
@@ -38,4 +38,4 @@ Once your organization has been approved you will have access to MCP and its ser
 === Feedback
 Readers may send feedback about errors, omissions, and ambiguities in this guide to osh@dma.dk or even better submit a pull request to the documentation available at https://github.com/MaritimeCloud/developers.maritimecloud.net.
 
-As previously mentioned questions about usage of MCP should be directed to our Google Group at https://groups.google.com/forum/#!forum/maritimecloud
+As previously mentioned questions about usage of MCP should be directed to our Google Group at https://groups.google.com/forum/#!forum/maritimeconnectivity
