--- a/identity/adoc/01Introduction.adoc
+++ b/identity/adoc/01Introduction.adoc
@@ -36,6 +36,6 @@ In order to get an organization, its users and any ships the organization might 
 Once your organization has been approved you will have access to MCP and its services. You should probably start by looking at the https://management.maritimecloud.net/[Management Portal]. See the http://manual.maritimeconnectivity.net/[manual] for how to use it.
 
 === Feedback
-Readers may send feedback about errors, omissions, and ambiguities in this guide to oliver@dmc.international or even better submit a pull request to the documentation available at https://github.com/MaritimeConnectivityPlatform/developers.maritimeconnectivity.net.
+Readers may send feedback about errors, omissions, and ambiguities in this guide to mailto:oliver@dmc.international[oliver@dmc.international] or even better submit a pull request to the documentation available at https://github.com/MaritimeConnectivityPlatform/developers.maritimeconnectivity.net.
 
 As previously mentioned questions about usage of MCP should be directed to our Google Group at https://groups.google.com/forum/#!forum/maritimeconnectivity
